# ely-cli

./: .gitignore  POC.md  README.md  bounty-pprd-access-control.md  cli.py  ely.yaml.example  requirements.txt  webapp.py
ely/: __init__.py  agent.py  config.py  contexts.py  guard.py  mcp.py  memory.py  planner.py  prompts.py  providers.py  skills.py  subagent.py  tools.py  tui.py  tui_v2.py  ui.py  ui_v2.py
ely/tools/: __init__.py  _core.py  bash.py  browser.py  contexts.py  custom.py  diary.py  files.py  sandbox.py  skills.py  subagents.py  vision.py  web.py
ely/webapp/: index.html  server.py
ely_rust/: Cargo.toml  README.md
ely_rust/src/: agent.rs  cli.rs  config.rs  contexts.rs  guard.rs  main.rs  mcp.rs  memory.rs  prompts.rs  providers.rs  skills.rs  subagent.rs  tools.rs
