[package]
name = "ely"
version = "0.1.0"
edition = "2021"
description = "CLI AI Agent — Rust port"

[[bin]]
name = "ely"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rustyline = { version = "15", features = ["derive"] }
dirs = "6"
chrono = "0.4"
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
scraper = "0.21"
select = "0.6"
async-trait = "0.1"
thiserror = "2"
toml = "0.8"
futures = "0.3"
tempfile = "3"
base64 = "0.22"
shellexpand = "3"
once_cell = "1"
walkdir = "2"
colored = "3"
